OO-8387: base of reporting in course planner